# Equilibria

./: .dockerignore  .gitignore  CONTRIBUTORS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  inference.py  pyproject.toml  requirements-deploy.txt  requirements-dev.txt
.github/workflows/: python-app.yml
environment/: demo.py  eval_rl.py  heuristic_policy.py  models.py  plot_results.py  rl_wrapper.py  train_rl.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  EpisodeGrade.jsx  api.js  config.js  styles.css  usePersistedSettings.js
scripts/: download_models.sh
server/: errors.py  main.py  ppo_agent.py  sessions.py
tests/: conftest.py  test_demo.py  test_env_core.py  test_eval_plot.py  test_inference.py  test_models.py  test_remaining.py  test_reward.py  test_rl_pipeline.py  test_server.py  test_simulation.py  test_state_manager.py  test_tasks.py  test_utils.py
