[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attention-economy-env"
version = "0.1.0"
description = "Multi-objective RL environment for ethical content recommendation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=environment --cov-report=term-missing"